--- a/ShoppingGuide/Info.plist
+++ b/ShoppingGuide/Info.plist
@@ -30,6 +30,14 @@
 				<string>latiao</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent1105821097</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>5</string>
