--- a/ShoppingGuide/Info.plist
+++ b/ShoppingGuide/Info.plist
@@ -51,7 +51,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxdc1e388c3822c80b</string>
+				<string>wxf17d91885336af29</string>
 			</array>
 		</dict>
 	</array>
